--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,6 +49,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
     <property name="value">
      <number>10</number>
     </property>
